Ffins a VisualitzaAlumnes Sense Errors

--- a/css/estils.css
+++ b/css/estils.css
@@ -10,3 +10,17 @@
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
 }
+table {
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid #999;
+    padding: 0.5rem;
+    text-align: left;
+}
+
+th{
+    background-color: #8a47d1;
+    color: white;
+}
